<resources>
    <string name="app_name">cmpt276group05</string>
    <string name="name">Restaurant Names:</string>
    <string name="of_issues"># of Issues:</string>
    <string name="icon">Restaurant Icons:</string>
    <string name="hazard_color">Hazard color:</string>
    <string name="hazard_icon">Hazard Icon:</string>
    <string name="inspection_dates">Inspection date:</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="date">Date</string>
    <string name="issue">Issue</string>
    <string name="hazard">Hazard</string>
    <string name="inspection_date">Date</string>
    <string name="inspection_type">Type</string>
    <string name="inspection_critical">Critical/No Critical</string>
    <string name="inspection_hazard">HazardRating</string>
    <string name="downloading_title">downloading ...</string>
    <string name="update_title">downloading ...</string>
    <string name="address">Address</string>
    <string name="gpscord">GPScord</string>
    <string name="inspection_report">Inspection Report</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">map</string>
    <string name="list">list</string>
    <string name="update_confirm_title">Confirm to Update</string>
    <string name="cancel_confirm_title">Confirm to Cancel</string>
    <string name="update_confirm_content">It has been 20 hours since the last update, do you want to update the data?</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_ok">ok</string>
    <string name="data_load_fail">data load fail</string>
</resources>