<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#ADD8E6"
    android:weightSum="6"
    >

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/image"
        android:layout_weight="2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/restaurant_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">


            <TextView
                android:id="@+id/issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/issue"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/hazardcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/hazard"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/hazardicon"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>




        <!--so our layout is set-->

    </LinearLayout>

</LinearLayout>