<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        tools:ignore="MissingConstraints" />


    <ListView
        android:id="@+id/InspectionListview"
        android:layout_width="411dp"
        android:layout_height="399dp"
        android:layout_marginTop="160dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/restaurantnametextView"
        app:layout_constraintVertical_bias="0.655"></ListView>

    <TextView
        android:id="@+id/restaurantnametextView"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="151dp"
        android:text="@string/restaurant_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addresstextView"
        android:layout_width="203dp"
        android:layout_height="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E81123"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GPScordtextview"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="194dp"
        android:text="@string/gpscord"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#673AB7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addresstextView"
        app:layout_constraintVertical_bias="0.102" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/location"
        app:layout_constraintEnd_toStartOf="@+id/addresstextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/inspection_report"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InspectionListview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GPScordtextview"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="48dp"
        android:layout_height="53dp"
        android:layout_marginStart="45dp"
        android:background="#FFFFFF"
        android:foreground="@drawable/abc_vector_test"
        app:layout_constraintEnd_toStartOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>